--- a/nats-server.conf
+++ b/nats-server.conf
@@ -13,3 +13,17 @@ cluster {
     $CLUSTER_ROUTES_SEED
   ]
 }
+
+websocket {
+  port: 8080           
+  no_tls: true         
+  allowed_origins: ["*"]
+}
+
+authorization {
+  no_auth_user: ""       
+}
+
+logtime: true          
+debug: true           
+trace: true             
